(Backend): Create Public API and Update Restadapter also remove helloworldadapter
