# backend/src/main/resources/api/arstolpersteine-public.openapi-spec.yml
@@ -63,221 +63,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemDto'
-    post:
-      tags:
-        - Secured
-      summary: Create a new Stolpersteine for given userId
-      description: Get all available Stolpersteine for an User
-      operationId: addStolpersteinForUser
-      parameters:
-        - name: userId
-          in: path
-          description: ID of User
-          required: true
-          schema:
-            type: integer
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/StolpersteineReqDto'
-      responses:
-        200:
-          description: return created stolpersteine
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StolpersteineResponseDto'
-        400:
-          description: Bad Request when no valid request was send
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        500:
-          description: Internal Server Errors
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-  /api/secured/stolpersteine/update/{stolpersteinId}:
-    put:
-      tags:
-        - Secured
-      summary: Update a existing Stolpersteine
-      description: Update a existing Stolperstein for given Id
-      operationId: updateStolpersteine
-      parameters:
-        - name: stolpersteinId
-          in: path
-          description: ID of explicit Stolperstein
-          required: true
-          schema:
-            type: integer
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/StolpersteineReqDto'
-      responses:
-        200:
-          description: update was successfully and return updated object
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/StolpersteineResponseDto'
-        400:
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        404:
-          description: When a Stolperstein is not existing
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        500:
-          description: Internal Server Errors
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-  /api/secured/requests:
-    get:
-      tags:
-        - Secured
-      summary: Load all existing Requests
-      description: Load all existing Requests for adding Stolperstein-Informations to the System
-      operationId: getStolpersteinRequests
-      responses:
-        200:
-          description: all existing requests
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RequestResponseDto'
-        403:
-          description: Forbidden - the Resource is only available for a specific role
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        500:
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-  /api/secured/requests/{requestId}/approve:
-    post:
-      tags:
-        - Secured
-      summary: Approve Request for Id
-      description: Approve referenced Request and activate Stolperstein
-      operationId: approveRequest
-      parameters:
-        - name: requestId
-          in: path
-          description: ID of Request
-          required: true
-          schema:
-            type: integer
-      responses:
-        200:
-          description: Request is approved and Stolperstein active
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RequestResponseDto'
-        400:
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        404:
-          description: Request for Id was not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        403:
-          description: Forbidden - the Resource is only available for a specific role
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        500:
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-  /api/secured/requests/{requestId}/reject:
-    post:
-      tags:
-        - Secured
-      summary: Reject Request for Id
-      description: Reject referenced Request and don't activate Stolperstein
-      operationId: approveRequest
-      parameters:
-        - name: requestId
-          in: path
-          description: ID of Request
-          required: true
-          schema:
-            type: integer
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                reason:
-                  nullable: false
-                  type: string
-                  description: Reason why Request is rejected
-                  example: Die Bilder entsprechen nicht unseren Richtlinien.
-                  maxLength: 512
-                informRequester:
-                  type: boolean
-                  description: If the requester should be informed, that the Request is rejected
-      responses:
-        200:
-          description: Request is reject
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/RequestResponseDto'
-        400:
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        404:
-          description: Request for Id was not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        403:
-          description: Forbidden - the Resource is only available for a specific role
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
-        500:
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDto'
 components:
   schemas:
     ProblemDto:
@@ -289,91 +74,6 @@ components:
         description:
           type: string
           example: Bad Request - Missing Parameter
-    VictimReqDto:
-      type: object
-      required:
-        - firstname
-        - lastname
-        - dateOfBirth
-        - dateOfDeath
-      properties:
-        firstname:
-          type: string
-          example: Max
-        lastname:
-          type: string
-          example: Mustermann
-        dateOfBirth:
-          type: string
-          format: date
-          example: 1933-12-21
-        dateOfDeath:
-          type: string
-          format: date
-          example: 1942-02-23
-    AddressReqDto:
-      type: object
-      required:
-        - streetName
-        - houseNumber
-        - postCode
-      properties:
-        streetName:
-          type: string
-          example: Mustermann-Strasse
-        houseNumber:
-          type: string
-          maxLength: 4
-          minLength: 1
-          example: 12a
-        postCode:
-          type: string
-          maxLength: 5
-          minLength: 5
-          example: 97074
-        city:
-          type: string
-          example: Wuerzburg
-    PhotoReqDto:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 232
-    StolpersteineReqDto:
-      type: object
-      required:
-        - description
-        - position
-        - victim
-      properties:
-        description:
-          type: string
-          example: That is an example of a stolperstein description
-        position:
-          type: object
-          required:
-            - lat
-            - lng
-          properties:
-            lat:
-              type: number
-              format: float
-              example: 90.233232
-            lng:
-              type: number
-              format: float
-              example: 23.232232
-        victim:
-          $ref: '#/components/schemas/VictimReqDto'
-        address:
-          $ref: '#/components/schemas/AddressReqDto'
-        photos:
-          type: array
-          items:
-            $ref: '#/components/schemas/PhotoReqDto'
-
     VictimResponseDto:
       type: object
       properties:
@@ -467,29 +167,4 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/PhotoResponseDto'
-    RequestResponseDto:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 3232
-        status:
-          type: string
-          enum:
-            - REQUESTED
-            - APPROVED
-            - REJECTED
-        requester:
-          type: object
-          properties:
-            firstname:
-              type: string
-              example: Max
-            lastname:
-              type: string
-              example: Mustermann
-        requestedStolperstein:
-          $ref: '#/components/schemas/StolpersteineResponseDto'
-
 
